syntax = "proto3";

package interval.v1;

import "proto/auth/v1/auth.proto";

service IntervalService {
    rpc PostInterval(PostIntervalRequest) returns (PostIntervalResponse) {
        option (auth.v1.auth_enabled) = true;
    }
    rpc ListInterval(ListIntervalRequest) returns (ListIntervalResponse) {}
    rpc UpdateInterval(UpdateIntervalRequest) returns (UpdateIntervalResponse) {
        option (auth.v1.auth_enabled) = true;
    }
    rpc DeleteInterval(DeleteIntervalRequest) returns (DeleteIntervalResponse) {
        option (auth.v1.auth_enabled) = true;
    }
}

message PostIntervalRequest {
    Interval interval = 1;
}

message PostIntervalResponse {
}

message ListIntervalRequest {
    int32 video_id = 1;
}

message ListIntervalResponse {
    repeated Interval intervals = 1;
}

message UpdateIntervalRequest {
    Interval interval = 1;
}

message UpdateIntervalResponse {
}

message DeleteIntervalRequest {
    int32 id = 1;
}

message DeleteIntervalResponse {
}

message Interval {
    int32 id = 1;
    int32 video_id = 2;
    float start_time = 3;
    float end_time = 4;
    string description = 5;
    repeated int32 category_ids = 6;
}

